--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,21 @@ body {
   text-align: center;
   font-family: Oswald, sans-sans-serif;
 }
+/*Styling for allNotes Section*/
+#allNotes {
+  text-align: right;
+}
 
+/*Styling for Modal*/
+.modal {
+z-index: 2;
+position: fixed;
+width: 50%;
+height: 50%;
+overflow: auto;
+background-color: grey;
+text-align: center;
+}
 .flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -14,7 +28,7 @@ body {
 }
 
 /*Styling for div created in Javascript*/
-.notesList {
+.note-holder {
   border: 1px solid black;
   margin: 10px 0;
   padding: 20px;
@@ -22,11 +36,11 @@ body {
 }
 /*Styling for deleteBtn created in Javascript*/
 .delete-btn {
-float: right;
-top: 0;
+text-align: right;
+margin-top: 20px;
 }
 /*Styling for noteText*/
 .noteText {
   display: inline-block;
-  width: 80%;
+  width: 80%
 }
