--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,23 @@ body {
 
 /*Styling for Modal*/
 .modal {
+  color: white;
+  font-size: 1.5rem;
+  border: 2px solid black;
+  border-radius: 10px;
+visibility: hidden;
+text-align: justify;
 z-index: 2;
-position: fixed;
-width: 50%;
+top: 15%;
+width: 80%;
 height: 50%;
 overflow: auto;
-background-color: grey;
-text-align: center;
+background-color: rgba(0,100,100,1);
+position: fixed;
+  padding: 70px;
+
 }
+
 .flex-container {
   display: flex;
   flex-wrap: wrap;
